[gd_scene load_steps=2 format=3 uid="uid://b77777777777"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Level: 1"
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -115.0
offset_right = 200.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Message"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelCompleteTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true